# HubOps-Service

./: .gitignore  README.md
backend/: README.md
backend/hubops-api/: pyproject.toml  run.py
backend/hubops-api/hubops_api/: __init__.py  config.py
backend/hubops-api/hubops_api/api/api_v1/endpoints/: hubspot.py  packages.py
backend/hubops-api/hubops_api/core/: security.py
backend/hubops-api/hubops_api/crud/: __init__.py  base.py  crud_deployment_log.py  crud_package.py  crud_package_component.py  crud_package_deployment.py
backend/hubops-api/hubops_api/logger/: logger.py
backend/hubops-api/hubops_api/models/: __init__.py  hubspot.py  packages.py  portals.py  users.py
backend/hubops-api/hubops_api/schemas/: __init__.py  hubspot.py  packages.py
