[tool.poetry]
name = "hubops-api"
version = "0.1.0"
description = ""
authors = ["reedwi <riandolo103@gmail.com>"]
readme = "README.md"
packages = [{include = "hubops_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
supabase = "^1.0.2"
uvicorn = "^0.21.1"
passlib = "^1.7.4"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
